# clawmonitor

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  README.zh-CN.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: architecture.md  asciinema-demo-guide.zh-CN.md  clawhub-skill.md  design.md  known-issues-feishu-telegram.md  launch-post.md  loadingart.txt  log-model.md  model-monitor.md  openclaw-session-transcript-missing-analysis-20260327.md  publishing.md  reference-repo-comparison-20260320.md  release-notes-0.2.0.md  release-process.md  status-model.md  system-monitor.md  system-view-guide.zh-CN.md  troubleshooting.md  tui_sugesstion.md  twitter-140-0.1.9.txt  twitter-140-0.2.0.txt  twitter-140.txt  wechat-update-0.1.4.md  wechat-update-0.1.6.md  wechat-update-0.1.9.md  wechat-update-0.2.0.md
scripts/: record_formal_demo.py  render_formal_demo.sh
skills/claw-monitor/: SKILL.md
src/clawmonitor/: __init__.py  acpx_sessions.py  actions.py  channels_status.py  cli.py  config.py  cron_cli.py  delivery_queue.py  diagnostics.py  eventlog.py  gateway_logs.py  labels.py  locks.py  model_monitor.py  openclaw_cli.py  openclaw_config.py  openclaw_cron.py  push_notify.py  redact.py  reports.py  session_keys.py  session_store.py  session_tail.py  state.py  status_cli.py  system_monitor.py  transcript_lookup.py  transcript_tail.py  tree_cli.py  tui.py
src/clawmonitor/assets/: __init__.py
tests/: test_eventlog.py  test_model_monitor.py  test_session_keys.py  test_session_store.py  test_system_monitor.py  test_transcript_lookup.py  test_transcript_tail.py  test_tui.py
