[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmonitor"
version = "0.1.4"
description = "Real-time OpenClaw session monitor (TUI) with Gateway log correlation and manual progress nudges."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenClaw community" }]
keywords = ["openclaw", "monitoring", "tui", "observability", "feishu", "telegram"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/openclawq/clawmonitor"
Repository = "https://github.com/openclawq/clawmonitor"
Issues = "https://github.com/openclawq/clawmonitor/issues"

[project.scripts]
clawmonitor = "clawmonitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
